--- a/lab.html
+++ b/lab.html
@@ -9,6 +9,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 <title>Виртуальная Страница</title> 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6HT96LZ1HS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6HT96LZ1HS');
+</script>
 
 </head> 
 
